--- a/custom-projects.hbs
+++ b/custom-projects.hbs
@@ -17,6 +17,8 @@
 				{{> repos}}
 				<div class="dropdown">hackersandslackers.com <i class="far fa-angle-down"></i></div>
 				<div style="clear:both"></div>
+				<h2>Kanban</h2>
+				<p>While a work in progress in itself, our Kanban board is a good way to see what we're working on.</p>
 			</div>
 			{{> kanban}}
 		{{/post}}
