--- a/src/less/postheader.less
+++ b/src/less/postheader.less
@@ -134,7 +134,8 @@
 
         a {
           color: white;
-          font-family: 'mr-eaves-xl-modern', serif;
+          font-family: 'mr-eaves-xl-modern', seri
+          f;
           text-transform: uppercase;
           font-size: 18px;
           font-weight: 500;
