--- a/partials/kanban.hbs
+++ b/partials/kanban.hbs
@@ -1,7 +1,17 @@
+<!--<div class="input-field col s12">
+    <select>
+      <option value="" disabled selected>Choose your option</option>
+      <option value="1">Option 1</option>
+      <option value="2">Option 2</option>
+      <option value="3">Option 3</option>
+    </select>
+    <label>Materialize Select</label>
+  </div>-->
+
 <div class="kanbancontainer swiper-container">
 <div class="kanban swiper-wrapper">
 
-  <div class="column swiper-slide">
+  <div class="column swiper-slide b">
   <div id="backlog">
     <h2>Backlog</h2>
     <span class="count"></span>
@@ -10,7 +20,7 @@
   </div>
 </div>
 
-<div class="column swiper-slide">
+<div class="column swiper-slide t">
   <div class="column swiper-slide" id="todo">
     <h2>To Do</h2>
     <span class="count"></span>
@@ -18,7 +28,7 @@
   </div>
   </div>
 
-  <div class="column swiper-slide">
+  <div class="column swiper-slide p">
   <div id="progress">
     <h2>In Progess</h2>
     <span class="count"></span>
@@ -26,7 +36,7 @@
   </div>
   </div>
 
-  <div class="column swiper-slide">
+  <div class="column swiper-slide d">
   <div id="done">
     <h2>Done</h2>
     <span class="count"></span>
