--- a/src/less/kanban.less
+++ b/src/less/kanban.less
@@ -147,6 +147,64 @@
       margin-bottom: 7px;
       height: 900px;
       min-width: 24%;
+      border-radius: 5px;
+      box-shadow: 2px 3px 4px rgba(58, 59, 103, 0.19);
+      overflow: hidden;
+
+    &.b {
+      &::before {
+        content: "";
+        position: absolute;
+        background: linear-gradient(to right, #7834b5, #715de2);
+        top: -1px;
+        width: 100%;
+        height: 6px;
+        z-index: 20;
+      }
+    }
+
+    &.t {
+      &::before {
+        content: "";
+        position: absolute;
+        background: linear-gradient(to right,#317ad6,#42b0da);
+        top: -1px;
+        width: 100%;
+        height: 6px;
+        z-index: 20;
+      }
+    }
+
+    &.p {
+
+
+      &::before {
+        content: "";
+        position: absolute;
+        background: linear-gradient(to right,#f1aa0b,#ffe395);
+        top: -1px;
+        width: 100%;
+        height: 6px;
+        z-index: 20;
+      }
+    }
+
+    &.d {
+
+
+      &::before {
+        content: "";
+        position: absolute;
+        background: linear-gradient(to right,#24b774,#7befd9);
+        top: -1px;
+        width: 100%;
+        height: 6px;
+        z-index: 20;
+      }
+    }
+
+
+
       @media(max-width: 1000px) {
         min-width: auto;
       }
@@ -162,7 +220,7 @@
 
       h2 {
         margin-top: 0;
-        font-size: 1.8em;
+        font-size: 1.38em;
         margin: 20px auto 30px;
         border-bottom: 1px solid fade(@theme-color, 40%);
         padding-bottom: 10px;
