--- a/partials/kanban.hbs
+++ b/partials/kanban.hbs
@@ -1,12 +1,14 @@
-<!--<div class="input-field col s12">
-    <select>
-      <option value="" disabled selected>Choose your option</option>
-      <option value="1">Option 1</option>
-      <option value="2">Option 2</option>
-      <option value="3">Option 3</option>
-    </select>
-    <label>Materialize Select</label>
-  </div>-->
+<div class="fixed-action-btn">
+  <a class="btn-floating btn-large red">
+    <i class="large material-icons">mode_edit</i>
+  </a>
+  <ul>
+    <li><a class="btn-floating red"><i class="material-icons">insert_chart</i></a></li>
+    <li><a class="btn-floating yellow darken-1"><i class="material-icons">format_quote</i></a></li>
+    <li><a class="btn-floating green"><i class="material-icons">publish</i></a></li>
+    <li><a class="btn-floating blue"><i class="material-icons">attach_file</i></a></li>
+  </ul>
+</div>
 
 <div class="kanbancontainer swiper-container">
 <div class="kanban swiper-wrapper">
@@ -187,4 +189,15 @@ const doneColumn = document.getElementById("done");
   swiper.slideTo(0, 300, false);
   swiper.pagination.update();
 });
+
+
+$(document).ready(function(){
+  document.addEventListener('DOMContentLoaded', function() {
+   var elems = document.querySelectorAll('.fixed-action-btn');
+   var instances = M.FloatingActionButton.init(elems, {
+     direction: 'left'
+   });
+ });
+ $('.fixed-action-btn').floatingActionButton();
+ });
 </script>
