--- a/src/less/screen.less
+++ b/src/less/screen.less
@@ -26,6 +26,7 @@
 @import 'code.less';
 @import 'social.less';
 @import 'swiper.less';
+@import 'floatingbutton.less';
 
 /*====================================================
 	fonts
