--- a/default.hbs
+++ b/default.hbs
@@ -9,14 +9,13 @@
 	<meta name="HandheldFriendly" content="True" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
 	{{! Styles }}
-	<link rel="stylesheet" href="https://use.typekit.net/okj4emy.css">
+	<link rel="stylesheet" href="https://use.typekit.net/tui1riy.css">
 	<link rel="stylesheet" type="text/css" href="{{asset "/css/includes/MyFontsWebfontsKit.css"}}">
 	<link rel="stylesheet" type="text/css" href="{{asset "/css/includes/fontawesome-all.min.css"}}">
 	<link rel="stylesheet" type="text/css" href="{{asset "css/main.min.css"}}">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/simplebar@latest/dist/simplebar.css">
 
 	<!-- Fonts -->
-	<link href="https://fonts.googleapis.com/css?family=Montserrat:200,400" rel="stylesheet">
 
 	{{! Scripts }}
 	<script src="https://s3.amazonaws.com/stitch-sdks/js/bundles/4.0.8/stitch.js"></script>
