--- a/src/less/footer.less
+++ b/src/less/footer.less
@@ -88,7 +88,7 @@
 			.single-author {
 				font-size: 18px;
 				font-weight: 200;
-				font-family: 'mr-eaves-xl-modern', serif;
+				font-family: 'sofia-pro', serif;
 				transition: all 0.2s ease;
 				border-bottom: 1px dashed rgba(255,255,255,.1) !important;
 
