--- a/src/less/githubcard.less
+++ b/src/less/githubcard.less
@@ -149,7 +149,7 @@
       padding: 15px 0 0;
       height: fit-content;
       text-transform: uppercase;
-      font-family: 'mr-eaves-xl-modern', sans-serif;
+      font-family: 'sofia-pro', sans-serif;
     }
 
     a {
@@ -237,7 +237,7 @@
     /* font-weight: bold; */
     color: #222;
     text-transform: uppercase;
-    font-family: 'mr-eaves-xl-modern', sans-serif;
+    font-family: 'sofia-pro', sans-serif;
   }
 
   .error {
