--- a/src/less/global.less
+++ b/src/less/global.less
@@ -174,7 +174,7 @@ textarea {
 
 blockquote {
 	border-left: 4px solid @theme-color;
-	font-family: 'mr-eaves-xl-modern', serif;
+	font-family: 'sofia-pro', serif;
 	font-style: italic;
 }
 
