--- a/src/less/page.less
+++ b/src/less/page.less
@@ -78,7 +78,7 @@
 
       a {
         color: white;
-        font-family: 'mr-eaves-xl-modern', serif;
+        font-family: 'sofia-pro', serif;
         text-transform: uppercase;
         font-size: 16px;
         font-weight: 600;
