--- a/src/less/post.less
+++ b/src/less/post.less
@@ -109,7 +109,7 @@
 
 	blockquote {
 		border-left: 4px solid #26a2c7;
-		font-family: mr-eaves-xl-modern,serif;
+		font-family: 'sofia-pro',serif;
 		font-style: normal;
 		background: #f9f9f9;
 		padding: 20px;
