--- a/src/less/author.less
+++ b/src/less/author.less
@@ -135,7 +135,7 @@
 								line-height: 1.1;
 								width: 100%;
 								height: 14px;
-								font-family: mr-eaves-xl-modern;
+								font-family: 'sofia-pro';
 								margin-top: 3px;
 							}
 						}
@@ -146,7 +146,7 @@
 							display: inline-block!important;
 							line-height: 1.4;
 							padding-top: 5px;
-							font-family: mr-eaves-xl-modern,sans-serif;
+							font-family: 'sofia-pro',sans-serif;
 						}
 					}
 
