--- a/src/less/menu.less
+++ b/src/less/menu.less
@@ -143,7 +143,7 @@
 
 			a {
 				color: #fff;
-		    font-family: mr-eaves-xl-modern,serif;
+		    font-family: 'sofia-pro',serif;
 		    text-transform: uppercase;
 		    font-size: 18px;
 		    font-weight: 500;
