--- a/src/less/postheader.less
+++ b/src/less/postheader.less
@@ -134,16 +134,15 @@
 
         a {
           color: white;
-          font-family: 'mr-eaves-xl-modern', seri
-          f;
+          font-family: 'sofia-pro', san-serif;
           text-transform: uppercase;
-          font-size: 18px;
+          font-size: 14px;
           font-weight: 500;
           letter-spacing: 0.5px;
           transition: all 0.2s ease-out;
 
           @media(max-width: 600px) {
-            font-size: 16px;
+            font-size: 14px;
           }
         }
       }
