--- a/src/less/pagination.less
+++ b/src/less/pagination.less
@@ -50,7 +50,7 @@
 		max-width: 39%;
 		line-height: 1.5;
 		font-size: 1em;
-		font-family: montserrat;
+		font-family: 'sofia-pro';
 		font-weight: 400;
 
 		@media(max-width: 800px){
