--- a/src/less/post.less
+++ b/src/less/post.less
@@ -80,7 +80,7 @@
 		margin-bottom: 20px;
 		color: @text-post-header;
 		line-height: 1.2;
-		font-family: montserrat;
+		font-family: 'sofia-pro';
 		font-size: 2em;
 		border-bottom: 1px solid #d7e8ec;
 		padding-bottom: 10px;
@@ -219,7 +219,7 @@
 
 			span {
 				font-weight: 400 !important;
-				font-family: 'Montserrat';
+				font-family: ''sofia-pro'';
 			}
 
 			i {
@@ -525,7 +525,7 @@
 				font-size: 14px;
 				border-style: none;
 				line-height: 1.2;
-				font-family: montserrat;
+				font-family: 'sofia-pro';
 				@media(max-width: 600px) {
 					font-size: 14px;
 					font-weight: 800;
