nav and post style tweaks

--- a/src/less/menu.less
+++ b/src/less/menu.less
@@ -68,7 +68,7 @@
 
 			@media(max-width: 800px) {
 				height: 44px;
-		    max-width: 280px;
+		    max-width: 235px;
 		    bottom: auto;
 		    top: 29%;
 		    width: 65%;
@@ -145,7 +145,7 @@
 				color: #fff;
 		    font-family: 'sofia-pro',serif;
 		    text-transform: uppercase;
-		    font-size: 18px;
+		    font-size: 16px;
 		    font-weight: 500;
 		    letter-spacing: .5px;
 		    transition: all .2s ease-out;
@@ -158,7 +158,7 @@
 			&:hover > a {
 				text-decoration: none;
 				cursor: pointer;
-				color: @hover-color;
+				color: #3f426d;
 			}
 
 			&.nav-current {
