--- a/src/less/post.less
+++ b/src/less/post.less
@@ -179,7 +179,7 @@
 				color: #8e8e8e !important;
 
 				@media(max-width: 600px){
-					font-size: .8em;
+					font-size: 1.1em;
 				}
 			}
 
@@ -205,7 +205,7 @@
 				color: #467192;
 
 				@media(max-width: 600px){
-					font-size: .8em;
+					font-size: 1.1em;
 				}
 			}
 		}
@@ -585,7 +585,7 @@
 		}
 
 		img {
-			border: 1px solid #eaeaea;
+			border: 1px solid #cecece;
 		}
 
 		a {
@@ -876,10 +876,7 @@
 		font-weight: 100;
 		width: 100%;
 		clear: both;
-		font-size: 18px;
-		@media(max-width: 800px) {
-			font-size: 16px;
-		}
+		font-size: 16px;
 	}
 
 	.author {
