mobile post footer

--- a/post.hbs
+++ b/post.hbs
@@ -48,7 +48,7 @@
 						<footer class="post-footer">
 							<div class="tag-list">
 								{{#if tags}}
-									<div class="tag-cloud">{{tags separator=""}}</div>
+									{{tags separator=""}}
 								{{/if}}
 							</div>
 							<div class="share">
