--- a/src/less/kanban.less
+++ b/src/less/kanban.less
@@ -153,7 +153,7 @@
       height: -webkit-fill-available;
       min-width: 24%;
       border-radius: 5px;
-      box-shadow: 2px 3px 4px rgba(58, 59, 103, 0.19);
+      box-shadow: 2px 3px 4px rgba(58, 59, 103, 0.1);
       overflow: hidden;
 
     &.b {
@@ -276,6 +276,7 @@
             line-height: 1.2;
             font-weight: 100;
             margin: 5px 0 20px;
+            width: 99%;
           }
 
           p {
