--- a/partials/kanban.hbs
+++ b/partials/kanban.hbs
@@ -7,13 +7,12 @@
   <div id="backlog">
     <h2>Backlog</h2>
     <span class="count"></span>
-    <div class="cards">
-    </div>
+    <div class="cards"></div>
   </div>
 </div>
 
 <div class="column swiper-slide t">
-  <div class="column swiper-slide" id="todo">
+  <div id="todo">
     <h2>To Do</h2>
     <span class="count"></span>
     <div class="cards"></div>
