--- a/src/less/linkpreview.less
+++ b/src/less/linkpreview.less
@@ -71,7 +71,7 @@
 
     h4 {
       margin: 0;
-      font-size: 1.35em;
+      font-size: 1.1em;
       font-weight: 500;
       line-height: 1;
       margin-bottom: 15px;
@@ -91,6 +91,7 @@
       font-size: 16px;
       text-overflow: ellipsis;
       display: -webkit-box;
+      font-family: 'AvenirNextLTPro-Light' !important;
       -webkit-line-clamp: 4;
       -webkit-box-orient: vertical;
       overflow: hidden;
