--- a/partials/author-sidebar.hbs
+++ b/partials/author-sidebar.hbs
@@ -1,4 +1,4 @@
-{{#author}}
+{{#primary_author}}
 <div class="sidebar">
 	<script>
 		const authorsClient  = stitch.Stitch.initializeDefaultAppClient('authors-rxtmg');
@@ -10,7 +10,7 @@
 	{{> widget-meetup}}
 	{{> widget-authortwitter}}
 </div>
-{{/author}}
+{{/primary_author}}
 <script>
 function authorSidebar(docs) {
 
