--- a/partials/postpreview.hbs
+++ b/partials/postpreview.hbs
@@ -25,14 +25,15 @@
         {{#primary_tag}}
             <span class="tags meta-item {{slug}}"><i class="fas fa-tags"></i> <span>{{name}}</span></span>
         {{/primary_tag}}
-        {{#author}}
+        {{#primary_author}}
+        {{primary_author.bio}}
           {{#unless profile_image}}
             <a href="{{url}}" class="meta-item author"><i class="fas fa-user" style="width:18px; height:18px; display:inline-block; margin-right:10px;"></i><span>{{name}}</span></a>
           {{/unless}}
           {{#if profile_image}}
             <a href="{{url}}" class="meta-item author"><img src="{{img_url profile_image}}" alt="Author image" class="avi"><span>{{name}}</span></a>
           {{/if}}
-        {{/author}}
+        {{/primary_author}}
         <span class="date meta-item"><i class="fal fa-calendar"></i> <span>{{date format="MMMM DD"}}</span></span>
       </div>
       <a href="{{url}}" class="btn btn-default">{{t "Continue Reading"}}</a>
