--- a/src/less/post.less
+++ b/src/less/post.less
@@ -580,10 +580,6 @@
 	.post-content {
 		margin: 25px 80px 40px;
 
-		.kg-card-markdown > p {
-			text-align: justify;
-		}
-
 		img {
 			border: 1px solid #cecece;
 		}
@@ -915,4 +911,17 @@
 		}
 	}
 }
+}
+
+.kg-width-wide {
+	max-height: 550px;
+	border: 1px solid #eaeaea;
+	margin: 10px auto;
+	display: block;
+	max-width: 99%;
+}
+
+.kg-width-full {
+	margin-left: calc(~"-50vw + 50%") !important;
+	margin-right: calc(~"-50vw + 50%") !important;
 }
