--- a/src/less/postfooter.less
+++ b/src/less/postfooter.less
@@ -47,11 +47,11 @@
 
 		i {
 			font-size: 14px;
-			margin-right: 10px;
+			margin: 0 10px 0 0;
 
 			@media(max-width: 600px) {
 				font-size: 24px;
-				margin-right: 0;
+				margin: 0 !important;
 			}
 		}
 
@@ -176,12 +176,6 @@
 					margin: 10px auto 0;
 					display: block;
 				}
-			}
-
-			.kg-card-markdown {
-				margin: 0 !important;
-				overflow-x: hidden;
-				padding: 0;
 			}
 		}
 
