--- a/src/less/social.less
+++ b/src/less/social.less
@@ -16,8 +16,9 @@
   left: -140%;
 }
 .social-btns .btn .fab {
-  -webkit-transform: scale(0.8);
-          transform: scale(0.8);
+  -webkit-transform: scale(0.7);
+          transform: scale(0.7);
+              margin-top: 9px;
 }
 .social-btns .btn.facebook:before {
   background-color: #3b5998;
@@ -74,8 +75,8 @@
 }
 .social-btns .btn:focus:before,
 .social-btns .btn:hover:before {
-  top: -30%;
-  left: -30%;
+  top: -75%;
+  left: -75%;
 }
 
 
@@ -84,8 +85,8 @@
 .social-btns .btn:hover .fas,
  {
   color: #fff;
-  -webkit-transform: scale(1);
-          transform: scale(1);
+  -webkit-transform: scale(.8);
+          transform: scale(.8);
 }
 .social-btns {
   height: 40px;
