--- a/author.hbs
+++ b/author.hbs
@@ -1,11 +1,11 @@
 {{!< default}}
 {{! The tag above means - insert everything in this file into the {body} of the default.hbs template }}
 <!-- start site's main content area -->
-{{#author}}
+{{#primary_author}}
 
 
 
-{{/author}}
+{{/primary_author}}
 <section class="content-wrap">
 	<div class="container">
 		<div class="row">
