--- a/src/less/social.less
+++ b/src/less/social.less
@@ -16,9 +16,15 @@
   left: -140%;
 }
 .social-btns .btn .fab {
-  -webkit-transform: scale(0.7);
-          transform: scale(0.7);
+  -webkit-transform: scale(1);
+          transform: scale(1);
               margin-top: 9px;
+
+              @media(max-width: 800px) {
+                -webkit-transform: scale(0.8);
+                        transform: scale(0.8);
+                            margin-top: 0;
+              }
 }
 .social-btns .btn.facebook:before {
   background-color: #3b5998;
@@ -75,8 +81,13 @@
 }
 .social-btns .btn:focus:before,
 .social-btns .btn:hover:before {
-  top: -75%;
-  left: -75%;
+  top: -205%;
+  left: -205%;
+  @media(max-width: 800px){
+    top: -75%;
+    left: -75%;
+  }
+
 }
 
 
@@ -135,7 +146,7 @@ justify-content: space-between;
 
 .social-btns .btn:before {
   content: '';
-  width: 200%;
+  width: 250%;
   height: 340%;
   position: absolute;
   -webkit-transform: rotate(45deg);
