social buttons css fix

--- a/src/less/social.less
+++ b/src/less/social.less
@@ -6,6 +6,7 @@
   transition: all 0.35s;
   transition-timing-function: cubic-bezier(0.31, -0.105, 0.43, 1.59);
   color: #c1c1c1;
+  font-size: 14px;
 
   &:hover {
     cursor:pointer;
@@ -94,8 +95,8 @@
 .social-btns .btn:hover .fas,
  {
   color: #fff;
-  -webkit-transform: scale(.8);
-          transform: scale(.8);
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
 }
 .social-btns {
   height: 40px;
@@ -136,7 +137,7 @@ justify-content: space-between;
 .widget .social-btns .btn:before {
   content: '';
   width: 200%;
-  height: 200%;
+  height: 350%;
   position: absolute;
   -webkit-transform: rotate(45deg);
           transform: rotate(45deg);
