cleaned up post previews

--- a/src/less/linkpreview.less
+++ b/src/less/linkpreview.less
@@ -6,7 +6,7 @@
   padding: 0;
   transition: all 0.2s ease-out;
   border-radius: 2px;
-  margin: 20px auto;
+  margin: 20px auto 30px;
   background: #fafafa;
   display: flex;
   justify-content: space-between;
@@ -24,7 +24,7 @@
     background-size: cover;
     background-position-x: center;
     background-position-y: center;
-    border-radius: 5px 0px 0px 5px;
+    border-radius: 0;
     border-right: 1px solid #d2d2d2;
     transition: all .2s easout;
 
@@ -73,7 +73,7 @@
       margin: 0;
       font-size: 1.1em;
       font-weight: 500;
-      line-height: 1;
+      line-height: 1.2;
       margin-bottom: 15px;
 
       @media(max-width: 800px) {
