--- a/src/less/kanban.less
+++ b/src/less/kanban.less
@@ -421,11 +421,13 @@
     a {
       max-width: 24%;
 
-      &:hover{
+      &:hover {
         cursor: pointer;
       }
+
       @media(max-width:800px) {
         max-width: none;
+        width: 100%;
       }
 
       .link-preview {
