--- a/src/less/kanban.less
+++ b/src/less/kanban.less
@@ -10,7 +10,6 @@
     width: 99.9%;
   }
 
-
   .swiper-pagination {
     position: absolute;
     text-align: center;
@@ -426,6 +425,7 @@
       }
       @media(max-width:800px) {
         max-width: none;
+        width: 100%;
       }
 
       .link-preview {
@@ -461,8 +461,6 @@
             margin: 0 0 5px;
             line-height: 1.3;
           }
-
-
 
           p {
             display: block;
