--- a/src/less/tags.less
+++ b/src/less/tags.less
@@ -194,4 +194,13 @@
       color: grey;
     }
   }
+
+  .atlassian {
+    background: #c4d8ff;
+    color: #36408c;
+
+    i {
+      color: #36408c;
+    }
+  }
 }
