--- a/default.hbs
+++ b/default.hbs
@@ -22,6 +22,7 @@
 	<script src="{{asset "/js/includes/jquery.min.js"}}"></script>
 	<script src="{{asset "/js/includes/swiper.min.js"}}"></script>
 	<script src="{{asset "/js/includes/secret.js"}}"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
 	{{#is "post"}}
 		<meta property="og:image" content="{{img_url feature_image}}">
 	{{else}}
