atlassian tag, meta width

--- a/src/less/post.less
+++ b/src/less/post.less
@@ -730,6 +730,11 @@
 			color: @text-post-header;
 		}
 
+		h3 {
+			font-size: 1.2em;
+    	font-weight: 200;
+		}
+
 		ol,
 		ul {
 			margin-left: 15px;
