--- a/src/less/code.less
+++ b/src/less/code.less
@@ -148,10 +148,8 @@ code {
 
 .fullscreenbtn {
   position: absolute;
-  left: 0;
-  bottom: 10px;
-  right: 10px;
-  top: 0;
+  bottom: 30px;
+  right: 42px;
   margin: auto;
   font-size: 30px;
   width: fit-content;
@@ -161,7 +159,7 @@ code {
   transition: all .3s easeout;
 
   &:hover {
-    opacity: 0.8;
+    opacity: 0.7;
   }
 
 
@@ -172,6 +170,8 @@ code {
     bottom:0;
     top:0;
     margin:auto;
+    height: 30px;
+    width: 30px;
   }
 
   @media(max-width: 600px) {
