--- a/src/less/code.less
+++ b/src/less/code.less
@@ -8,6 +8,7 @@ pre {
     margin-right: calc(~"-50vw + 50%") !important;
     width: auto !important;
     white-space: pre-line !important;
+    max-height: 400px;
   }
 
   span {
@@ -36,7 +37,7 @@ p > code {
 
 code {
   margin: 0;
-
+  height: 100%;
 }
 
 .hljs,
@@ -65,9 +66,6 @@ code {
     margin-left: calc(~"-50vw + 50%") !important;
     margin-right: calc(~"-50vw + 50%") !important;
     white-space: pre-line !important;
-    max-height: 400px;
-
-
   }
 }
 
