full width fixes

--- a/src/less/code.less
+++ b/src/less/code.less
@@ -2,6 +2,7 @@ pre {
   white-space: pre-wrap;
   transition: all .5s easeout;
   position: relative;
+  overflow-y: hidden;
 
   @media(max-width: 600px) {
     margin-left: calc(~"-50vw + 50%") !important;
