--- a/src/less/code.less
+++ b/src/less/code.less
@@ -155,6 +155,7 @@ code {
   color: #6c8699;
   cursor: pointer;
   transition: all .3s easeout;
+  display: none;
 
   &:hover {
     opacity: 0.7;
