--- a/src/less/post.less
+++ b/src/less/post.less
@@ -72,7 +72,7 @@
 			font-size: 1.2em;
 			text-align: center;
 			line-height: 1.1;
-			max-width: 450px;
+			max-width:  px;
 		}
 	}
 
@@ -138,7 +138,7 @@
 		align-items: center;
 
 		@media(max-width: 800px) {
-			max-width: 450px;
+			max-width: 500px;
 			margin: 0 auto !important;
 			width: auto;
 			display: flex;
