--- a/src/less/post.less
+++ b/src/less/post.less
@@ -667,8 +667,11 @@
 			line-height: 4;
 		}
 	}
-
-
+	
+	#materialbox-overlay {
+		background-color: rgba(0,0,0,.5);
+		position: absolute;
+	}
 }
 
 .post {
