post preview, tag fonts, pre animation

--- a/src/less/postpreview.less
+++ b/src/less/postpreview.less
@@ -97,18 +97,21 @@
 
 
 
-	.kg-post {
+	.post-content {
 			text-align: justify;
 
 			* {
 				display: none;
 			}
 
-			p:first-child,
-			em,
-			strong,
-			a {
-				display:inline;
+			p:first-child{
+				em,
+				strong,
+				a,
+				em,
+				code  {
+					display:inline;
+				}
 			}
 	}
 
