--- a/src/less/postpreview.less
+++ b/src/less/postpreview.less
@@ -104,13 +104,13 @@
 				display: none;
 			}
 
-			p:first-child{
+			p:first-child {
 				em,
 				strong,
 				a,
 				em,
 				code  {
-					display:inline;
+					display:inline !important;
 				}
 			}
 	}
