--- a/src/less/code.less
+++ b/src/less/code.less
@@ -3,6 +3,7 @@ pre {
   transition: all .5s easeout;
   position: relative;
   overflow-y: hidden;
+  padding: 22px 20px;
 
   @media(max-width: 600px) {
     margin-left: calc(~"-50vw + 50%") !important;
@@ -47,7 +48,7 @@ code {
   display: block;
   overflow-y: scroll !important;
   overflow-x: hidden !important;
-  padding: 1em 1.5em;
+  /*padding: 1em 1.5em;*/
   color: #166c8b;
   background: #f1f5f8 !important;
   overflow-wrap: break-word;
@@ -62,7 +63,7 @@ code {
   }
   @media(max-width: 600px) {
     font-size: 13px;
-    padding: 20px;
+    /* padding: 20px; */
     margin-left: calc(~"-50vw + 50%") !important;
     margin-right: calc(~"-50vw + 50%") !important;
     white-space: pre-line !important;
@@ -170,7 +171,8 @@ code {
     top:0;
     margin:auto;
     height: 30px;
-    width: 30px;
+    width: 16px;
+    opacity: .6;
   }
 
   @media(max-width: 600px) {
