--- a/src/less/code.less
+++ b/src/less/code.less
@@ -3,7 +3,7 @@ pre {
   transition: all .5s easeout;
   position: relative;
   overflow-y: hidden;
-  padding: 22px 20px;
+  padding: 22px 20px !important;
 
   @media(max-width: 600px) {
     margin-left: calc(~"-50vw + 50%") !important;
@@ -23,8 +23,6 @@ pre > code {
   background: #f1f5f8 !important;
   white-space: pre-wrap !important;
   @media(max-width: 600px) {
-    margin-left: calc(~"-50vw + 50%") !important;
-    margin-right: calc(~"-50vw + 50%") !important;
     overflow-y: hidden !important;
     white-space: pre-line !important;
   }
