tag font weight

--- a/src/less/post.less
+++ b/src/less/post.less
@@ -221,6 +221,11 @@
 				font-size: 1.2em;
 			}
 
+			&.tags span {
+				font-weight: 200 !important;
+				font-family: AvenirNextLTPro-Light,sans-serif !important;
+			}
+
 			span {
 				font-weight: 400 !important;
 				font-family: AvenirNextLTPro-Medium,sans-serif !important;
