tag font weight

--- a/src/less/postpreview.less
+++ b/src/less/postpreview.less
@@ -104,16 +104,10 @@
 				display: none;
 			}
 
-			p:first-child {
-				em,
-				strong,
-				a,
-				em,
-				code  {
+			p:first-child * {
 					display:inline !important;
 				}
 			}
-	}
 
 	i {
 		margin-right: 10px;
