--- a/src/less/postpreview.less
+++ b/src/less/postpreview.less
@@ -17,6 +17,7 @@
 				overflow: hidden;
 				-webkit-line-clamp: 4;
 				-webkit-box-orient: vertical;
+				 line-height: 1.8em;
 
 				* {
 					display:inline !important;
