--- a/partials/header.hbs
+++ b/partials/header.hbs
@@ -20,7 +20,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	<!-- start navigation -->
 </div>
 	<video class="videoObject" autoplay muted loop id="myVideo">
-		<source src="https://hackersandslackers.com/assets/vid/bg.mp4" type="video/mp4">
+		<source src="https://hackersandslackers.com/assets/vid/bg2.mp4" type="video/mp4">
 	</video>
 </header>
 {{!--
