--- a/src/less/menu.less
+++ b/src/less/menu.less
@@ -17,8 +17,8 @@
 
 .videoHeader {
 	width:100%;
-	height:330px;
-	background-size: cover;
+	height:fit-content;
+	background-size: contain;
 	position: relative;
 	overflow: hidden;
 	border-bottom: 1px solid #27a2c7;
