--- a/src/less/nav.less
+++ b/src/less/nav.less
@@ -3,6 +3,22 @@
     text-align: left;
     padding: 0;
 
+    .branding {
+      width: 300px;
+      display: block;
+      position: absolute;
+      top: 0;
+      left: 0;
+      bottom: 0;
+      right: 0;
+      margin: auto;
+      height: fit-content;
+
+      img {
+        width: 100%;
+      }
+    }
+
     .menu {
       li {
         display: block;
