--- a/src/less/menu.less
+++ b/src/less/menu.less
@@ -13,6 +13,22 @@
 		 background: url("https://hackers.nyc3.digitaloceanspaces.com/head.jpg") center center;
 		 background-size: cover;
 	}
+
+	.branding {
+		width: 300px;
+		display: block;
+		position: absolute;
+		top: 0;
+		left: 0;
+		bottom: 0;
+		right: 0;
+		margin: auto;
+		height: fit-content;
+
+		img {
+			width: 100%;
+		}
+	}
 }
 
 .videoHeader {
