code snippet tag

--- a/partials/postpreview.hbs
+++ b/partials/postpreview.hbs
@@ -34,7 +34,7 @@
             <a href="{{url}}" class="meta-item author"><img src="{{img_url profile_image}}" alt="Author image" class="avi"><span>{{name}}</span></a>
           {{/if}}
         {{/primary_author}}
-        <span class="date meta-item"><i class="fal fa-calendar"></i> <span>{{date format="MMMM DD"}}</span></span>
+        <span class="date meta-item"><i class="fal fa-calendar"></i> <span>{{date format="MMM DD"}}</span></span>
       </div>
       <a href="{{url}}" class="btn btn-default">{{t "Continue Reading"}}</a>
     </div>
