--- a/src/less/tags.less
+++ b/src/less/tags.less
@@ -203,4 +203,14 @@
       color: #36408c;
     }
   }
+
+  .code-snippet-corner {
+    background: #d6dae6;
+    color: #747d9a;
+
+    i {
+      color: #747d9a;
+    }
+  }
+
 }
