--- a/default.hbs
+++ b/default.hbs
@@ -11,7 +11,7 @@
 	{{! Styles }}
 	<link rel="stylesheet" href="https://use.typekit.net/tui1riy.css">
 	<link rel="stylesheet" type="text/css" href="{{asset "/css/includes/MyFontsWebfontsKit.css"}}">
-	<link rel="stylesheet" type="text/css" href="{{asset "/css/includes/fontawesome-all.min.css"}}">
+	<link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-9ralMzdK1QYsk4yBY680hmsb4/hJ98xK3w0TIaJ3ll4POWpWUYaA2bRjGGujGT8w" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="{{asset "css/main.min.css"}}">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/simplebar@latest/dist/simplebar.css">
 
