mobile author slug

--- a/src/less/post.less
+++ b/src/less/post.less
@@ -902,6 +902,18 @@
 				text-decoration: none;
 			}
 		}
+
+		@media(max-width: 600px) {
+			display:none;
+		}
+	}
+
+	.author-mobile {
+		display:none;
+
+		@media(max-width: 600px) {
+			display:inline-block;
+		}
 	}
 
 	.meta-info {
