mobile author slug

--- a/post.hbs
+++ b/post.hbs
@@ -30,7 +30,7 @@
 							{{/unless}}
 							{{#if profile_image}}
 								<a href="{{url}}" class="meta-item author"><img src="{{img_url profile_image}}" alt="Author image" class="avi"><span>{{name}}</span></a>
-								<a href="{{url}}" class="meta-item author-mobile"><img src="{{img_url profile_image}}" alt="Author image" class="avi"><span>{{slug}}</span></a>
+								<a href="{{url}}" class="meta-item author mobile"><img src="{{img_url profile_image}}" alt="Author image" class="avi"><span>{{slug}}</span></a>
 							{{/if}}
 						{{/primary_author}}
 						<span class="date meta-item"><i class="fal fa-calendar"></i> <span>{{date format="MMMM DD"}}</span></span>
