--- a/src/less/post.less
+++ b/src/less/post.less
@@ -893,8 +893,17 @@
 		font-size: 1.5em;
 		margin-bottom: 5px;
 		font-family: 'AvenirNextLTPro-Medium', 'AvenirNextLTPro-Light';
+
 		@media(max-width: 600px) {
 			font-size: 1.3em;
+		}
+
+		&.desktop {
+			display:inline-block;
+
+			@media(max-width: 600px) {
+				display:none;
+			}
 		}
 
 		&.mobile {
@@ -912,7 +921,7 @@
 		}
 
 		@media(max-width: 600px) {
-			display:none;
+
 		}
 	}
 
