mobile author slug

--- a/src/less/post.less
+++ b/src/less/post.less
@@ -222,7 +222,7 @@
 			}
 
 			&.desktop {
-				display:inline-block;
+				display:flex;
 
 				@media(max-width: 600px) {
 					display:none;
@@ -233,7 +233,7 @@
 				display:none;
 
 				@media(max-width: 600px) {
-					display:inline-block;
+					display:flex;
 				}
 			}
 
