--- a/src/less/menu.less
+++ b/src/less/menu.less
@@ -129,8 +129,7 @@
 	top: 0;
 	left: 0;
 	right: 0;
-	background: linear-gradient(0deg, rgba(18, 13, 123, 0.01) 10%, #003c5f 100%);
-	height: 150px;
+	height: 50px;
 	z-index: 100;
 	@media(max-width: 800px) {
 		height: auto;
@@ -159,13 +158,14 @@
 			list-style: none;
 			display: inline-block;
 			position: relative;
+			text-shadow: 0px 0px 30px black;
 
 			a {
 				color: #fff;
 		    font-family: 'sofia-pro',serif;
 		    text-transform: uppercase;
-		    font-size: 16px;
-		    font-weight: 500;
+				font-size: 18px;
+				font-weight: 300;
 		    letter-spacing: .5px;
 		    transition: all .2s ease-out;
 				@media(max-width: 800px) {
@@ -177,7 +177,7 @@
 			&:hover > a {
 				text-decoration: none;
 				cursor: pointer;
-				color: #3f426d;
+				opacity: .8;
 			}
 
 			&.nav-current {
